# univy

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: project-helper.mdc
backend/: .gitignore  MOCK_PROMPTS_GUIDE.md  QUICK_MOCK_EXAMPLES.json  README.md  devlog.txt  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 52e477c32b5c_init_table.py  88494b9009ee_init_table.py
backend/openapi/: lightrag-openapi.json
backend/outputs/task_2e5fd598-387a-4def-bc79-a732c416f8c7/: VVAFER_Paper.doctags  VVAFER_Paper.json  VVAFER_Paper.md
backend/scripts/: reset_db.py  start_celery_beat.py  start_celery_workers.py  start_file_scanning_worker.py  start_maintenance_worker.py  start_pdf_worker.py
backend/src/univy/: api.py  config.py  constants.py  database.py  lightrag_client.py  lightrag_utils.py  logger.py  main.py
backend/src/univy/auth/: security.py  views.py
backend/src/univy/celery/: celery_univy.py  tasks.py  views.py
backend/src/univy/celery_config/: celery_univy.py  tasks.py
backend/src/univy/document_pipeline/: models.py  tasks.py  utils.py  views.py
backend/src/univy/pdf_parser/: constants.py  models.py  pdfreader.py  query_rag.py  service.py  tasks.py  views.py
backend/src/univy/rag/: models.py  query_rag.py  test_rag.py  views.py
backend/src/univy/smart_notes/: tasks.py  util.py  utils.py  views.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: env.mjs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/app/: page.tsx
frontend/src/components/: button-fastapi-test.tsx
frontend/src/lib/: auth.ts  schema.ts
lightrag/: Dockerfile  Dockerfile.ollama  docker-compose.yml
src/univy/: main.py  test_app.py
