[project]
name = "univy"
version = "0.1.0"
description = ""
authors = [
    {name = "kunkoala",email = "azharffrahadian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "magic-pdf[full] (>=1.3.10,<2.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)"
]

[tool.poetry]
packages = [{include = "univy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
