[project]
name = "univy"
version = "0.1.0"
description = ""
authors = [
    {name = "kunkoala",email = "azharffrahadian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "magic-pdf[full] (>=1.3.10,<2.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "univy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
